--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
       <button class="tab is-active" data-tab="home">ホーム</button>
       <button class="tab" data-tab="practice">通常練習</button>
       <button class="tab" data-tab="rest">休息</button>
+      <button class="tab" data-tab="recruit">勧誘</button>
       <button class="tab" data-tab="settings">設定</button>
     </nav>
 
